Added key to better handle updates Added GroupSortDirection Added Blazor Server Demo (we need to be able to test using Blazor Server as well)

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
@@ -57,7 +57,16 @@
 
                     if (GroupSortField != null)
                     {
-                        Data = Data.OrderByDescending(x => x.GetType().GetProperty(GroupSortField).GetValue(x, null)).ToList();
+                        if (GroupSortDirection == ListSortDirection.Ascending)
+                        {
+                            Data = Data.OrderBy(x => x.GetType().GetProperty(GroupSortField).GetValue(x, null));
+                        }
+                        else
+                        {
+                            Data = Data.OrderByDescending(x => x.GetType().GetProperty(GroupSortField).GetValue(x, null));
+                        }
+                        
+                        
                     }
 
                     var groupedData = Data.GroupBy(GroupBy);
