Added support for having deatails but not showing then, either on row lever of for the full grid

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
@@ -108,7 +108,7 @@
                                 {
                                     <td></td>
                                 }
-                                @if (Columns.Any(c => !c.Visible) || DetailTemplate != null)
+                                @if (Columns.Any(c => !c.Visible) || (DetailTemplate != null && ShowDetails))
                                 {
                                     <td></td>
                                 }
@@ -152,7 +152,7 @@
                         {
                             <td></td>
                         }
-                        @if (Columns.Any(c => !c.Visible) || DetailTemplate != null)
+                        @if (Columns.Any(c => !c.Visible) || (DetailTemplate != null && ShowDetails))
                         {
                             <td></td>
                         }
