--- a/Blazm.Components/BlazmWebAssemblyDemo/Pages/DetailsFilter.razor
+++ b/Blazm.Components/BlazmWebAssemblyDemo/Pages/DetailsFilter.razor
@@ -1,4 +1,4 @@
-﻿@page "/detailsfilter"
+﻿@page "/details"
 @using Blazm.Components
 @using BlazmWebAssemblyDemo.Data
 @inject WeatherForecastService ForecastService
@@ -14,8 +14,8 @@
 }
 else
 {
-    <h2>BlazmGrid - SHow details only on hot</h2>
-    <BlazmGrid Data="forecasts" RowShowDetails="@(r=>{return r.Summary=="Hot";})" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
+    <h2>BlazmGrid - Data Column</h2>
+    <BlazmGrid Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
         <DetailTemplate>
             Details! @context.Summary
         </DetailTemplate>
@@ -33,33 +33,6 @@ else
                 <FooterTemplate>
                     @{
                             var temp = context as List<WeatherForecast>;
-                    }
-                    @temp.Sum(t => t.TemperatureF)
-                </FooterTemplate>
-            </GridColumn>
-            <GridColumn Field="@nameof(WeatherForecast.Summary)" Priority="0" />
-        </GridColumns>
-
-    </BlazmGrid>
-
-    <BlazmGrid Data="forecasts" ShowDetails="false" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
-        <DetailTemplate>
-            Details! @context.Summary
-        </DetailTemplate>
-        <GridColumns>
-            <GridColumn Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
-            <GridColumn Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
-                <FooterTemplate>
-                    @{
-                        var temp = context as List<WeatherForecast>;
-                    }
-                    @temp.Sum(t => t.TemperatureC)
-                </FooterTemplate>
-            </GridColumn>
-            <GridColumn Field="@nameof(WeatherForecast.TemperatureF)" Priority="2" Class="alignRight">
-                <FooterTemplate>
-                    @{
-                        var temp = context as List<WeatherForecast>;
                     }
                     @temp.Sum(t => t.TemperatureF)
                 </FooterTemplate>
