--- a/Blazm.Components/BlazmWebAssemblyDemo/Pages/Filters.razor
+++ b/Blazm.Components/BlazmWebAssemblyDemo/Pages/Filters.razor
@@ -20,6 +20,18 @@
 </BlazmGrid>
 
 
+<BlazmGrid Data="forecasts" PageSize="10" ShowFilter="true" @ref="Grid" GroupBy="w=>w.Location">
+    <GridColumns>
+        <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
+        <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight" />
+        <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.Summary)" Priority="0" />
+        <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.NullValue)" Priority="0" />
+    </GridColumns>
+    <GroupHeader>
+        @context
+    </GroupHeader>
+</BlazmGrid>
+
 @code { 
     private BlazmGrid<WeatherForecast> Grid;
     private WeatherForecast[] forecasts;
