fixed sorting with swedish characters

--- a/Blazm.Components/BlazmWebAssemblyDemo/Pages/Simple.razor
+++ b/Blazm.Components/BlazmWebAssemblyDemo/Pages/Simple.razor
@@ -29,6 +29,7 @@
             </FooterTemplate>
         </GridColumn>
         <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.Summary)" Priority="0" />
+        <GridColumn CanFilter="true" Field="@nameof(WeatherForecast.Location)" Priority="0" />
     </GridColumns>
 </BlazmGrid>
 
